welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:2: error: value && is not a member of Int
	if( (a%3) && (a%5)){
                  ^fizzBuzz:3: error: not found: value Fizz
		return Fizz Buzz;
                       ^fizzBuzz:5: error: type mismatch;
 found   : Int
 required: Boolean
	if( (a%3)){
              ^fizzBuzz:6: error: not found: value Fizz
		return Fizz;
                       ^fizzBuzz:8: error: type mismatch;
 found   : Int
 required: Boolean
	if( (a%5)){
              ^fizzBuzz:9: error: not found: value Buzz
		return Buzz;
                       ^